--- a/content/serious/opioids-silent-dependence.mdx
+++ b/content/serious/opioids-silent-dependence.mdx
@@ -7,16 +7,9 @@ field: "Medicine"
 date: "2025-11-03"
 summary: "Kills pain, then quietly keeps it alive."
 ---
-
----
-title: "Opioids: The Silent Dependence"
-slug: "opioids-silent-dependence"
-date: "2025-11-03"
-field: "Medicine"
-verdict: "evidence-based"
-tags: ["opioids", "post-op", "pain", "patient-education"]
-summary: "Why the strong pill helps at first—and how it can quietly keep pain loud. Plain-language guide with real sources."
----
+<div align="center">
+  <img src="/pain.png" alt="PAIN!!!" width="300" />
+</div>
 
 **Disclaimer:** Not medical advice — just explaining what I think you need to know.
 
@@ -27,6 +20,9 @@ After surgery, you might leave the hospital with a little painkiller starter pac
 - **Mysterious white pill →** Opioid (for everything else)  
 
 That last one works beautifully — until it doesn’t.
+Opioids silence pain fast — but your body pushes back by turning the volume up.
+That’s how relief can quietly become dependence.
+They’re useful for a few days — just make sure you and your doctor talk through how and when to stop before you start.
 
 ---
 
