--- a/content/serious/tylenol-pregnancy.mdx
+++ b/content/serious/tylenol-pregnancy.mdx
@@ -5,14 +5,234 @@ verdict: "caution"               # options we’ll wire up below
 tags: ["Epidemiology", "Toxicology"]
 field: "Public Health"
 date: "2025-11-02"
-summary: "We reviewed 42 studies so you don’t have to. It’s complicated, not catastrophic."
+summary: "A harmless painkiller or a hidden risk? We still don’t know — and that’s the point."
 ---
 
-## Sense
-There’s plausible biology (e.g., prostaglandins, oxidative stress) and several observational links.
+<div align="center">
+  <img src="/tylenol.png" alt="Pregnant frog holding head with 'Tylenol??'" width="300" />
+</div>
 
-## Nonsense
-Most studies are observational with confounds. Effect sizes are small and inconsistent.
+---
 
-## Lesson
-Risk ≠ panic. Use intentionally, talk to your clinician, avoid chronic/high doses without guidance.
+**Disclaimer:** Not medical advice — just explaining what the research actually says (and doesn’t say).
+
+## TL;DR
+Does acetaminophen (Tylenol) during pregnancy have anything to do with autism or other neurodevelopmental disorders (NDDs)?  
+The quick answer: **we don’t know.**  
+Yes… we really don’t know.
+
+We don’t have evidence that proves it *does*.  
+We don’t have evidence that proves it *doesn’t*.
+
+If you’re pregnant, before you take anything — **talk to your healthcare provider.**  
+Over-the-counter meds aren’t meant for long-term use, even if you’re not pregnant.  
+So please, **read the instructions.**
+
+*(Source: CDC)*
+
+---
+
+## Why We’re Talking About This
+Because the public conversation around Tylenol and pregnancy has gotten messy — political even.  
+With new statements from the current administration, public mistrust, and RFK Jr. taking swings at Big Pharma, even doctors are feeling defensive.  
+**Bias cuts both ways** — from conspiracy forums on one end to doctors and pharmacists on the other, who sometimes get defensive and swing too far in the opposite direction.
+
+So what’s happening?  
+You want to know, but don’t want to read any papers?  
+Fair. That’s literally why we’re here.
+
+*(Source: Harvard T.H. Chan School of Public Health)*
+
+---
+
+## Before We Start
+There’s something we need to talk about first.  
+In the medical world, when we say *“something causes something,”* that statement doesn’t come easy.  
+We don’t just throw the word *cause* around — we need evidence, logic, and data that hold up under a microscope.
+
+We often see two things happen together — like Tylenol use during pregnancy and autism later in childhood — but that doesn’t mean one *caused* the other.  
+That’s where a big idea comes in: **causation vs. correlation.**
+
+*(Source: Hill AB, 1965 — Bradford Hill Criteria for Causation.)*
+
+---
+
+### Bradford Hill Criteria — the Medical World’s Checklist *(boring, can skip)*
+- **Strength:** Is the relationship strong or barely noticeable?  
+- **Consistency:** Do different studies find the same thing again and again?  
+- **Temporality:** Did the exposure happen *before* the outcome?  
+- **Dose–Response:** Do higher doses mean higher risk?  
+- **Plausibility:** Does it make biological sense?  
+
+If enough of these boxes get checked, scientists lean toward *“causal.”*
+
+---
+
+## Why It’s So Hard Here
+Just like smoking, we can’t test this directly.  
+We can’t force pregnant women to take Tylenol just to see if their kids end up with autism — that’s unethical.
+
+So we rely on **observational studies** — real people, real life, messy data.  
+And messy data means noise: pain, fever, genetics, stress, infections, other meds.  
+When the possible signal is small, it’s hard to tell what’s real and what’s background fuzz.
+
+That’s why two massive, peer-reviewed studies can come to opposite conclusions — they’re asking slightly different questions with different controls.
+
+*(Source: JAMA Network Open)*
+
+---
+
+## The Main Fight: JAMA vs Everyone Else
+The go-to “defensive” study — the one doctors love to quote — comes from **JAMA (2024)**.  
+Big name. Big sample. **Two million births.** Clean stats. Controlled for genetics.
+
+Here’s what it concluded:  
+> “Models without sibling controls identified *marginally increased risks* of autism and ADHD associated with acetaminophen use during pregnancy.  
+> However, analyses of matched full-sibling pairs found no evidence of increased risk.”
+
+Wait — *what?*  
+They actually found **marginally increased risks**?  
+Then why is this study used everywhere to *defend* Tylenol?
+
+Here’s what happened:  
+When they didn’t control for genetics, they saw a small bump in risk.  
+When they added sibling controls — comparing kids born to the same mother — **poof**, the difference disappeared.
+
+That’s why doctors say, *“It doesn’t cause autism.”*  
+And they’re **technically right** — by scientific standards.  
+(Refer to the *Bradford Hill Criteria* section you probably skipped.)
+
+But being *technically right* doesn’t mean the story ends there.
+
+Think of it like this:  
+You test people in your county to see if **running 3 km at night** helps them lose weight.  
+You find — yes — a difference.  
+Night runners weigh a little less.  
+Then you narrow it down.  
+You only include **marathon athletes** — people who already run daily and eat like Olympians.  
+Suddenly… **poof** — the difference disappears.
+
+### What Does It Actually Say?
+Doctors read that “no evidence of increased risk after sibling control” line and take it as proof Tylenol doesn’t cause autism.  
+Technically, that’s true — the study didn’t prove causation.  
+But *not proving causation* isn’t the same as *proving no effect.*  
+Once you filter everything through genetics and shared environment,  
+**the signal got swallowed — genetics drowned out everything else.**
+
+*(Source: JAMA Network Open, 2024)*
+
+---
+
+## The Other Side of the Table
+Now flip to the **precautionary camp** — Harvard, Johns Hopkins, Mount Sinai.  
+They studied tens of thousands of mother–child pairs — **Nurses’ Health Study II**, **Boston Birth Cohort**, and others.
+
+Their findings?  
+They saw **possible associations** between prenatal acetaminophen use and later diagnoses of **ASD and ADHD.**
+
+They didn’t say *“causes.”*  
+They said *“linked,” “associated,” “may increase risk.”*  
+Careful words — but not empty ones.  
+
+These studies point toward **biological plausibility** — lab evidence that acetaminophen might alter fetal brain development or oxidative stress during key growth windows.  
+
+> Andrea Baccarelli, M.D., Ph.D., Dean of the Faculty, Harvard T.H. Chan School of Public Health:  
+> “Colleagues and I recently conducted a rigorous review, funded by the National Institutes of Health, of the potential risks of acetaminophen use during pregnancy.  
+> We found evidence of an association between exposure to acetaminophen during pregnancy and increased incidence of neurodevelopmental disorders in children.”  
+
+And in 2021, an **international consensus statement** echoed that concern, urging pregnant women to *minimize exposure*:  
+**“lowest effective dose, shortest possible time.”**  
+Not a ban. A precaution.  
+
+*(Source: Harvard University; Johns Hopkins University; Mount Sinai Health System; International Consensus Statement, 2021.)*
+
+---
+
+So wait — if the JAMA study has blind spots and these show small but consistent signals,  
+why do we still say *“we don’t know”*?
+
+Because the signal is tiny, and the noise is huge.  
+
+No one’s popping Tylenol pills for fun.  
+People take it because they’re in **pain**, have a **fever**, or are fighting an **infection**.  
+
+So what’s actually causing what?  
+Is it the **drug**, or the **reason** for taking the drug?  
+Science can’t separate that cleanly yet.  
+
+That’s the problem.  
+Real life isn’t a clean lab study.  
+You can’t separate the pill from the pain.  
+You can’t ethically assign pregnant women to “Tylenol” and “no Tylenol” groups just to see what happens.  
+
+So even with all these massive studies, the best we can say is:  
+there might be a pattern — but it’s buried in a lot of noise.  
+
+*(Source: Harvard T.H. Chan School of Public Health)*
+
+---
+
+## The Verdict
+In medicine, it’s always about **risk versus benefit.**  
+Nothing is ever completely safe — not even what you buy next to the candy bars at the pharmacy.
+
+If you get bitten by a raccoon, you take the rabies shot.  
+Sure, it has side effects — but rabies? It’s *almost always fatal.*  
+That’s how doctors think: which risk do we take, and which one kills us faster?  
+
+Same idea here.  
+During pregnancy, a **high fever** itself can harm the baby — that’s proven.  
+So sometimes *not treating it* is the bigger danger.  
+
+That’s why the current advice sounds boring but sensible:  
+**Use the lowest effective dose, for the shortest possible time, and only when necessary — after talking to your doctor.**  
+It’s not a scare message, and it’s not a free pass either.  
+It’s just… balance.  
+
+*(Source: International Consensus Statement)*
+
+---
+
+## Conclusion
+So does Tylenol during pregnancy *cause* autism?  
+The honest answer: **we don’t know.**
+
+The studies that defend it have limits.  
+The studies that warn about it have noise.  
+And both sides are partly right — depending on which lens you use.  
+
+We’re still missing clean proof either way, because you can’t ethically run that experiment.  
+Until then, the smartest move is the same old one:  
+**talk to your doctor, read the label, and don’t turn internet debates into medical advice (including this one).**  
+
+Take your science with caution, your medicine with supervision,  
+and your headlines with a Tylenol-sized grain of salt.  
+
+*(Source: Harvard, Johns Hopkins, Mount Sinai, NIH, JAMA)*
+
+---
+
+### One Last Thing  
+If you already have doubts about Tylenol, that doesn’t mean you should grab something else.  
+**Don’t take Advil (ibuprofen), naproxen, or aspirin during pregnancy** unless your doctor specifically tells you to.  
+Those are NSAIDs — they can interfere with fetal blood flow and kidney function, especially in the later stages of pregnancy.  
+
+That’s why acetaminophen is still the go-to option — not because it’s perfect, but because it’s the safest thing we currently have data for.  
+If you’re unsure, talk to your healthcare provider before taking anything.  
+
+*(Source: CDC)*
+
+---
+
+
+## References  
+*(for those bored enough to read further)*  
+
+- <a href="https://www.cdc.gov/medicine-and-pregnancy/about/index.html" target="_blank" rel="noopener noreferrer">Centers for Disease Control and Prevention (CDC).</a> *Medicine and Pregnancy: An Overview.*  
+- <a href="https://pubmed.ncbi.nlm.nih.gov/14283879/" target="_blank" rel="noopener noreferrer">Hill AB (1965). <em>The Environment and Disease: Association or Causation?</em></a> *Proceedings of the Royal Society of Medicine.*  
+- <a href="https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2817406" target="_blank" rel="noopener noreferrer">JAMA Network Open.</a> *Acetaminophen Use During Pregnancy and Children’s Risk of Autism, ADHD, and Intellectual Disability.*  
+- <a href="https://hsph.harvard.edu/news/using-acetaminophen-during-pregnancy-may-increase-childrens-autism-and-adhd-risk/" target="_blank" rel="noopener noreferrer">Harvard T.H. Chan School of Public Health.</a> *Using Acetaminophen During Pregnancy May Increase Children’s Autism and ADHD Risk.*  
+- <a href="https://hub.jhu.edu/2019/11/05/acetaminophen-pregnancy-autism-adhd/" target="_blank" rel="noopener noreferrer">Johns Hopkins University.</a> *Taking Tylenol During Pregnancy Associated With Elevated Risks for Autism, ADHD.*  
+- <a href="https://www.mountsinai.org/about/newsroom/2025/mount-sinai-study-supports-evidence-that-prenatal-acetaminophen-use-may-be-linked-to-increased-risk-of-autism-and-adhd" target="_blank" rel="noopener noreferrer">Mount Sinai Health System.</a> *Mount Sinai Study Supports Evidence That Prenatal Acetaminophen Use May Be Linked to Increased Risk of Autism and ADHD.*  
+- <a href="https://ehjournal.biomedcentral.com/articles/10.1186/s12940-025-01208-0" target="_blank" rel="noopener noreferrer">Andrea Baccarelli, M.D., Ph.D. (Harvard T.H. Chan School of Public Health).</a> *Evaluation of the evidence on acetaminophen use and neurodevelopmental disorders using the Navigation Guide methodology.*  
+- <a href="https://pubmed.ncbi.nlm.nih.gov/34556849/" target="_blank" rel="noopener noreferrer">International Consensus Statement (Nature Reviews Endocrinology, 2021).</a> *Paracetamol use during pregnancy — a call for precautionary action.*  
