--- a/content/serious/tylenol-pregnancy.mdx
+++ b/content/serious/tylenol-pregnancy.mdx
@@ -46,7 +46,17 @@ Fair. That’s literally why we’re here.
 ---
 
 ## Before We Start
-There’s something we need to talk about first.  
+
+Take these two statements:
+
+1. We found evidence of an association between acetaminophen exposure during pregnancy and an increased incidence of neurodevelopmental disorders in children.
+2. Acetaminophen does not cause autism.
+
+At first, they seem to contradict each other — but surprisingly, both are true.
+How can that be?
+
+That’s exactly why people are debating....the truth is often buried beneath layers of scientific nuance.
+ 
 In the medical world, when we say *“something causes something,”* that statement doesn’t come easy.  
 We don’t just throw the word *cause* around — we need evidence, logic, and data that hold up under a microscope.
 
